# jokeapi_rs

./: Cargo.toml  README.md
example/: Cargo.toml
examples/: joke.rs
src/: lib.rs
src/structs/: joke.rs  mod.rs
