[package]
name = "jokeapi_rs"
version = "0.1.0"
edition = "2018"
authors = ["Gauravsingh Sisodia gauravsinghsisodia5@gmail.com"]
readme = "./README.md"
repository = "https://github.com/grvxs/jokeapi_rs"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = {version = "1", features = ["derive"]}
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
