[package]
name = "jokeapi_rs"
version = "0.1.2"
edition = "2018"
authors = ["grvxs gauravsinghsisodia5@gmail.com"]
description = "Rust wrapper for https://v2.jokeapi.dev/"
keywords = ["api", "joke"]
readme = "./README.md"
repository = "https://github.com/grvxs/jokeapi_rs"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1.6.1", features = ["full"] }
serde = {version = "1", features = ["derive"]}
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
